# Metalyzr

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ADMIN_CHEATSHEET.md  ADMIN_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_PIPELINE.md  CONTRIBUTING.md  DEBUGGING.md  DOCKER_HANDOFF_REPORT.md  Dockerfile  ETAT_DES_LIEUX.md  ETAT_DES_LIEUX_COMPLET.md  FINAL_STATUS_REPORT.md  HANDOVER_FINAL_ETAT_DES_LIEUX.md  HANDOVER_GUIDE.md  INTEGRATIONS_REELLES.md  INTEGRATION_SUCCESS.md  MONITORING_GUIDE.md  MVP_CLEANUP_REPORT.md  MVP_GUIDE.md  MVP_HONEST_README.md  NOTICE  PROJECT_STATUS.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  REAL_ROADMAP.md  SECURITY.md  STATUS_REPORT.md  TECHNICAL_DEEP_DIVE.md  TEST_INTERFACES.md  docker-compose.monitoring.yml  docker-compose.yml  final-start.sh  install-integrations.sh  main_simple.py  pyproject.toml  requirements_complete.txt  start-frontend.sh  (+13 more)
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  alembic.ini  cache_manager.py  crud.py  database.py  health_enhanced.py  init_db.py  main.py  main_simple.py  main_simple_backup.py  main_simple_backup_20250709_063551.py  models.py  pyproject.toml  requirements_complete.txt  requirements_integrations.txt  requirements_simple.txt  schemas.py  start-backend.sh  start_server.sh
backend/alembic/: env.py
backend/api/: __init__.py  archetypes.py  metagame.py  tournaments.py
backend/api/admin/: routes.py
backend/api/v1/: metagame.py
backend/api/v1/endpoints/: metagame.py
backend/cache/integrations/archetype_formats/Modern/archetypes/: control.json
backend/cache/integrations/archetype_formats/Modern/fallbacks/: midrange.json
backend/cache/integrations/archetype_formats/Standard/archetypes/: burn.json
backend/collectors/: config.py  demo_unified_scraper.py  main.py  melee_api_collector.py  melee_playwright_collector.py  models.py  mtgo_cache_manager.py  mtgtop8_scraper.py  storage.py  test_mtgo_cache_integration.py  utils.py
backend/data/: archetypes.json  stats.json  tournaments.json
backend/integrations/: __init__.py  badaro_archetype_engine.py  decklist_cache_reader.py  integration_service.py  jiliac_cache.py  melee_client.py  mtg_scraper.py  mtgo_scraper.py  startgg_client.py
backend/models/: __init__.py  archetype.py  card.py  deck.py  tournament.py
backend/services/: archetype_service.py  metagame_service.py
docs/: 01_procedure_autonomie.html  01_procedure_autonomie_macos.html  02_guide_administrateur.html  03_guide_utilisateur.html  04_architecture_serveur.html  05_documentation_technique.html  06_objectif_methodo.html  07_checklist_ultime.html  ADMIN_GUIDE.md  DEPLOYMENT_GUIDE.md  MANUAL_PREREQUISITES.md  USER_GUIDE.md  architecture.html  aws-bucket-setup.html  etat-des-lieux.html  melee_api_documentation.html  procedure-monorepo.html  usage.html  vision_initiale.html
frontend/: .mvp_pids  Dockerfile  Dockerfile.dev  MANUAL_TESTS.md  TESTING_GUIDE.md  dashboard.html  docker-compose.frontend.yml  package-lock.json  package.json  run-all-tests.sh  server.js  start-dev.sh  start-fixed.sh  start-frontend.sh  start-simple.sh  test-admin.html  validate-server.py
frontend/public/: index.html
frontend/scripts/: test-all.sh
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: mockHandlers.ts  realAPI.ts
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
monitoring/: metalyzr_rules.yml  prometheus.yml
scraper/: Dockerfile  README.md  archetype_classifier.py  badaro_archetype_engine.py  base_scraper.py  data_manager.py  main.py  melee_api_client.py  requirements.txt  test_badaro_integration.py  unified_scraper.py
scripts/: docker-fix-macos-m1.sh
(+29 files in other folders)
