[tool.poetry]
name = "metalyzr-backend"
version = "0.1.0"
description = "Backend service for the Metalyzr project."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
uvloop = "^0.19.0"
pydantic = "^2.7.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
# Added for GraphQL client for Melee.gg/start.gg
gql = {extras = ["aiohttp"], version = "^3.5.0"}
# Added for heavy-duty browser-based scraping for MTGO
selenium = "^4.22.0"


[tool.poetry.group.dev.dependencies] 